New UI existing validations (#260)
* functions for comparison added

* existing-validation component added, so that there is a modal window informing of an existing validation with the same settings

* checking if there exists a validation with the same settings added

* checking for an existing validation added along with opening a modal window

* deleting new validation added and closing database connection moved before condition check

* buttons and appropriate functions added

* handling output added

* function and view for copying validation added

* copying validation handled: button and appropriate functions added

* url for copying validation added

* function for copying validation developed

* view frozen when a modal window opened

* class name changed to be consistent with the modal window

* date format and zone added

* condition added not to show a pin button on somebody's validation if it's not published

* button title updated

* additional condition added so that the component renders properly even if there are no plots

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -122,7 +122,7 @@
             type="button"
             icon="pi pi-plus"
             class="btn-action"
-            title="Track this validation"
+            title="Pin this validation"
             (click)="addValidation(validationRun.id)"
             onclick="">
     </button>
@@ -236,6 +236,15 @@
 
   <ng-template #elseSingleValidation>
     <div style="float: right;">
+      <button *ngIf="isLogged && validationRun.is_unpublished" pButton
+              type="button"
+              icon="pi pi-copy"
+              class="btn-action-large"
+              title="If you copy this validation, it will be added to the list of your validations with all the result files. You will have a full control over the copy."
+              label="Copy validation"
+              (click)="copy(validationRun.id)">
+      </button>
+
       <a *ngIf="isLogged"
          pButton
          type="button"
@@ -247,23 +256,23 @@
          title="Load settings">
       </a>
 
-      <button *ngIf="isLogged && isTrackedByTheUser"
+      <button *ngIf="isLogged && isTrackedByTheUser && !validationRun.is_unpublished"
               pButton
               type="button"
               icon="pi pi-times"
               class="btn-action-large"
-              label="Untrack"
+              label="Unpin"
               title="Remove this validation from your list"
               (click)="removeValidation(validationRun.id)">
       </button>
 
-      <button *ngIf="isLogged && !isTrackedByTheUser"
+      <button *ngIf="isLogged && !isTrackedByTheUser && !validationRun.is_unpublished"
               class="btn-action-large"
               pButton
               type="button"
               icon="pi pi-plus"
-              label="Track"
-              title="Track this validation"
+              label="Pin"
+              title="Pinning results gives a quick access to it, however, if the results is removed by the owner, you will loose access to it."
               (click)="addValidation(validationRun.id)">
       </button>
 
