--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -8,7 +8,7 @@
 <!--<qa-map class="map"-->
 <!--        [center]="[-483281,6904172]"-->
 <!--        [zoom]="8.5"></qa-map>-->
-<div class="p-grid no-gutters">
+<div class="p-grid no-gutters" [ngClass]="{'non-scrollable': isExistingValidationWindowOpen}">
   <div class="
     p-col-12
     p-md-10 p-md-offset-1
@@ -162,12 +162,17 @@
       <div class="p-col-12">
         <div>
           <div class="p-d-flex p-jc-center">
-            <p-button label="Validate" (onClick)="startValidation()"></p-button>
+            <p-button label="Validate" (onClick)="startValidation(true)"></p-button>
           </div>
         </div>
       </div>
 
     </div>
   </div>
+  <qa-existing-validation *ngIf="isExistingValidationWindowOpen"
+                          [isThereValidation]="isThereValidation"
+                          (startValidation)="startValidation(false)">
+  </qa-existing-validation>
 </div>
 <qa-scroll-to-top></qa-scroll-to-top>
+
