--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -15,12 +15,13 @@
     <div class="pb-3">
     <span [innerHtml]="table | dompurify"></span>
     <div class="d-flex justify-content-between align-items-center">
-      <button type="button"
-              style="width: 12rem;"
-              class="btn btn-sm btn-primary"
+      <button pButton
+              type="button"
+              class="btn-action-large"
               title="Download the table to a .csv file"
+              label=" Download .csv table"
+              icon="pi pi-download"
               (click)="getComparisonTableAsCsv()">
-        <span class="pi pi-download"></span> Download .csv table
       </button>
     </div>
     </div>
