ngClass changed to class

--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -47,7 +47,7 @@
             is the only option when the validations belong to the same run, e.g. multiple non-reference datasets).
           </div>
           <div class="p-grid p-align-center">
-            <div ngClass='p-col'>
+            <div class='p-col'>
               <img width="95%"
                    height="95%"
                    [src]=sanitizePlotUrl(img)
