some table styling added

--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -11,8 +11,8 @@
         <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
       </label>
     </ng-template>
-    <div class="pb-3"> Shown are the median values for each metric in the two comparison datasets, and their difference.</div>
-    <div class="pb-3">
+    <div class="p-pb-3"> Shown are the median values for each metric in the two comparison datasets, and their difference.</div>
+    <div class="p-py3">
     <span [innerHtml]="table | dompurify"></span>
     <div class="d-flex justify-content-between align-items-center">
       <button pButton
