--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6130,6 +6130,12 @@ a.btn-action.p-button:hover, a.btn-action-large.p-button:hover{
 .dataframe td:first-child{
   font-weight: bold;
 }
+.dataframe.comparison td:not(:first-child){
+  width: 10rem;
+}
+.dataframe.comparison td:first-child{
+  min-width: 20rem;
+}
 
 @media screen and (min-width: 564px) and (max-width: 714.9px){
   .btn-action.p-button {
