ngClass changed to class

--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -17,7 +17,7 @@
 
       <div class="p-col">
         <div class="p-grid p-align-center">
-          <div *ngFor="let comparisonplot of plots; let ind = index" ngClass='p-col'>
+          <div *ngFor="let comparisonplot of plots; let ind = index" class='p-col'>
               <img width="95%"
                    height="95%"
                    [src]=sanitizePlotUrl(comparisonplot.plot)
