--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -66,7 +66,7 @@
                 <p-dropdown id="validationSelector"
                             [options]="validations4Comparison"
                             [(ngModel)]="this.selectedValidation"
-                            optionLabel="id"
+                            optionLabel="comparison_label"
                             [style]="{'width':'100%'}"></p-dropdown>
 
                 <label *ngIf="selectedDatasetModel[0]" for="validationSelector">{{selectValidationLabel}}</label>
