--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -1,29 +1,34 @@
-<div *ngIf="(comparisonTable$|async) as table" class="p-col-12">
-  <p-panel [toggleable]="true" [collapsed]="true">
-    <ng-template pTemplate="header">
-      <div class="text-center my-1" style="width: 92%">
-        <h4 class="my-0 font-weight-normal">Comparison statistics</h4>
+<div *ngIf="(comparisonTable$|async) as table" class="p-grid no-gutters">
+  <div class="p-col-12">
+    <p-panel [toggleable]="true" [collapsed]="true">
+      <ng-template pTemplate="header">
+        <div class="text-center my-1" style="width: 92%">
+          <h4 class="my-0 font-weight-normal">Comparison statistics</h4>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="icons">
+        <label class="mb-0"
+               pTooltip="Expand this section to inspect a table with the metric-wise difference of the two datasets."
+               tooltipPosition="bottom">
+          <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
+        </label>
+      </ng-template>
+      <div class="p-pb-3"> Shown are the median values for each metric in the two comparison datasets, and their
+        difference.
       </div>
-    </ng-template>
-    <ng-template pTemplate="icons">
-      <label class="mb-0" pTooltip="Expand this section to inspect a table with the metric-wise difference of the two datasets."
-             tooltipPosition="bottom">
-        <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
-      </label>
-    </ng-template>
-    <div class="p-pb-3"> Shown are the median values for each metric in the two comparison datasets, and their difference.</div>
-    <div class="p-py3">
-    <span [innerHtml]="table | dompurify"></span>
-    <div class="d-flex justify-content-between align-items-center">
-      <button pButton
-              type="button"
-              class="btn-action-large"
-              title="Download the table to a .csv file"
-              label=" Download .csv table"
-              icon="pi pi-download"
-              (click)="getComparisonTableAsCsv()">
-      </button>
-    </div>
-    </div>
-  </p-panel>
+      <div class="p-py3">
+        <span [innerHtml]="table | dompurify"></span>
+        <div class="d-flex justify-content-between align-items-center">
+          <button pButton
+                  type="button"
+                  class="btn-action-large"
+                  title="Download the table to a .csv file"
+                  label=" Download .csv table"
+                  icon="pi pi-download"
+                  (click)="getComparisonTableAsCsv()">
+          </button>
+        </div>
+      </div>
+    </p-panel>
+  </div>
 </div>
