--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.scss
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.scss
@@ -18,3 +18,10 @@ input{
   background-color: rgba(255, 108, 92, .15);
 }
 
+.comparison-header {
+  font-size: 1.2rem;
+}
+.for-comparison-list{
+  padding: 0;
+}
+
