--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -1,14 +1,16 @@
 <main class="p-grid p-mx-0">
-  <p-panel *ngIf="validationRun$ | async as validationRun" class="p-col-12">
-<!--    <div *ngIf="!forComparison">-->
-    <ng-template  *ngIf="forComparison" pTemplate="header">
-      Description of validation: {{validationRun.id}}
+  <p-panel *ngIf="validationRun$ | async as validationRun" class="p-col-12 p-py-0 p-px-1"
+           [ngClass]="{'for-comparison-body': forComparison}">
+    <ng-template *ngIf="forComparison" pTemplate="header">
+      <div class="text-center" style="width:100%">
+        <h4 class="p-my-0 comparison-header">Description of validation {{validationRun.id}}</h4>
+      </div>
     </ng-template>
-      <ng-template *ngIf="!forComparison" pTemplate="header">
-        <div class="text-center" style="width:100%">
-          <h4 class="p-my-0 font-weight-normal">
-            Summary:
-            <span *ngIf="validationRun.is_unpublished && validationRun.isOwner">
+    <ng-template *ngIf="!forComparison" pTemplate="header">
+      <div class="text-center" style="width:100%">
+        <h4 class="p-my-0 font-weight-normal">
+          Summary:
+          <span *ngIf="validationRun.is_unpublished && validationRun.isOwner">
             <span *ngIf="hideElement" class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}} </span>
             <button
               pButton
@@ -44,32 +46,32 @@
               </button>
             </span>
           </span>
-            <span *ngIf="!validationRun.is_unpublished"
-                  class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
-              <span class="no_name_change_info pi pi-question-circle help-icon"
-                    title="Validation has been published. There is no possibility of changing its name."> </span>
+          <span *ngIf="!validationRun.is_unpublished"
+                class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+            <span class="no_name_change_info pi pi-question-circle help-icon"
+                  title="Validation has been published. There is no possibility of changing its name."> </span>
               </span>
-            <span *ngIf="!validationRun.isOwner"
-                  class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
-              <span class="no_name_change_info pi pi-question-circle help-icon"
-                    title="Validation belongs to another user. There is no possibility of changing its name."> </span>
+          <span *ngIf="!validationRun.isOwner"
+                class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+            <span class="no_name_change_info pi pi-question-circle help-icon"
+                  title="Validation belongs to another user. There is no possibility of changing its name."> </span>
             </span>
-            <span *ngIf="!validationRun.is_unpublished"
-                  class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
-              <span class="no_name_change_info pi pi-question-circle help-icon"
-                    title="Validation has been published. There is no possibility of changing its name."> </span>
+          <span *ngIf="!validationRun.is_unpublished"
+                class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+            <span class="no_name_change_info pi pi-question-circle help-icon"
+                  title="Validation has been published. There is no possibility of changing its name."> </span>
               </span>
-            <span *ngIf="!validationRun.isOwner"
-                  class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
-              <span class="no_name_change_info pi pi-question-circle help-icon"
-                    title="Validation belongs to another user. There is no possibility of changing its name."> </span>
+          <span *ngIf="!validationRun.isOwner"
+                class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+            <span class="no_name_change_info pi pi-question-circle help-icon"
+                  title="Validation belongs to another user. There is no possibility of changing its name."> </span>
               </span>
-          </h4>
-        </div>
-      </ng-template>
-<!--    </div>-->
+        </h4>
+      </div>
+    </ng-template>
+    <!--    </div>-->
     <div *ngIf="configurations$| async as configurations" class="card-body">
-      <ul>
+      <ul [ngClass]="{'for-comparison-list': forComparison}">
         <li>Started validation on {{ validationRun.start_time | date: dateFormat :timeZone }} {{timeZone}}, finished
           on {{ validationRun.end_time | date: dateFormat :timeZone }} {{timeZone}}.
         </li>
@@ -152,45 +154,45 @@
         </ng-template>
         <li> Scaling method: {{ scalingMethods[validationRun.scaling_method] }}.</li>
 
-<!--        <div *ngIf="!forComparison">-->
-          <li  *ngIf="!forComparison">Processing took {{ validationRun.runTime }} minutes (wall time).</li>
+        <li *ngIf="!forComparison">Processing took {{ validationRun.runTime }} minutes (wall time).</li>
 
-          <li *ngIf="validationRun.progress === -1; else elseProgress">The validation was cancelled.</li>
-          <ng-template #elseProgress>
-            <li *ngIf="!forComparison" [ngClass]="{'alert-danger': validationRun.errorRate > 0}">
-              {{validationRun.errorRate * 100 | number: '.0'}}% ({{ validationRun.error_points }}
-              of {{ validationRun.total_points }}) of the processed locations (grid points) produced errors during
-              calculation.
-            </li>
-          </ng-template>
-          <li *ngIf="validationRun.expiry_date && getCurrentUser() === validationRun.user && !forComparison">
+        <li *ngIf="validationRun.progress === -1; else elseProgress">The validation was cancelled.</li>
+        <ng-template #elseProgress>
+          <li *ngIf="!forComparison" [ngClass]="{'alert-danger': validationRun.errorRate > 0}">
+            {{validationRun.errorRate * 100 | number: '.0'}}% ({{ validationRun.error_points }}
+            of {{ validationRun.total_points }}) of the processed locations (grid points) produced errors during
+            calculation.
+          </li>
+        </ng-template>
+        <li *ngIf="validationRun.expiry_date && getCurrentUser() === validationRun.user && !forComparison">
             <span *ngIf="validationRun.is_near_expiry">
               <span class="p-panel-header-icon pi pi-exclamation-triangle expiry-icons"></span>
               This validation will SOON be automatically removed during cleanup
               on {{ validationRun.expiry_date|date: dateFormat :timeZone}} {{timeZone}}.
             </span>
 
-            <span *ngIf="!validationRun.is_near_expiry">
+          <span *ngIf="!validationRun.is_near_expiry">
               <span class="p-panel-header-icon pi pi-calendar expiry-icons"></span>
               This validation will be automatically removed during cleanup
               on {{ validationRun.expiry_date|date: dateFormat :timeZone }} {{timeZone}}.
             </span>
 
-          </li>
-          <li *ngIf="validationRun.is_archived && validationRun.is_unpublished && !forComparison">
+        </li>
+        <li *ngIf="validationRun.is_archived && validationRun.is_unpublished && !forComparison">
                 <span
                   class="p-panel-header-icon pi pi- expiry-icons">
                   <fa-icon [icon]="faIcons.faArchive"></fa-icon>
                 </span>
-            This validation has been archived. It will NOT be automatically removed during cleanup.
-          </li>
-          <li *ngIf="validationRun.doi && !forComparison">
-            <span class="pi pi-book"></span> This result was published on zenodo with DOI
-            <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
-          </li>
-<!--        </div>-->
+          This validation has been archived. It will NOT be automatically removed during cleanup.
+        </li>
+        <li *ngIf="validationRun.doi && !forComparison">
+          <span class="pi pi-book"></span> This result was published on zenodo with DOI
+          <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
+        </li>
+        <!--        </div>-->
       </ul>
-      <qa-buttons *ngIf="!forComparison" [validationList]="false" [validationRun]="validationRun" (doRefresh)="refresh($event)"></qa-buttons>
+      <qa-buttons *ngIf="!forComparison" [validationList]="false" [validationRun]="validationRun"
+                  (doRefresh)="refresh($event)"></qa-buttons>
     </div>
   </p-panel>
 </main>
