--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -12,7 +12,7 @@
         </label>
       </ng-template>
       <div class="p-col">
-        <div class="pb-3">The selected validations have a non-overlapping extent, which means that there are no
+        <div class="p-pb-3">The selected validations have a non-overlapping extent, which means that there are no
           common validation points. If you wish to perform the comparison, check the 'Include all points from the
           selected validations' option in the 'Spatial extent' dialogue box and re-run the comparison. In this case
           a boxplot only will be shown, comparing the distribution of values in the two validations.
@@ -37,7 +37,7 @@
         </ng-template>
 
         <div class="p-col">
-          <div class="pb-3">
+          <div class="p-pb-3">
             {{ this.intersectionText ?
             "The comparison is performed by considering only the reference grid points that are in the common " +
             "spatial extent of the two validations, as specified in the 'Spatial extent' dialogue box. To include all " +
@@ -46,7 +46,7 @@
             "is the only option when the validations belong to the same run, e.g. multiple non-reference datasets)."
             }}
           </div>
-          <div class="p-grid p-align-center">
+          <div class="p-grid center">
             <div class='p-col'>
               <img width="95%"
                    height="95%"
