download button moved to the right

--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -46,7 +46,7 @@
             "is the only option when the validations belong to the same run, e.g. multiple non-reference datasets)."
             }}
           </div>
-          <div class="p-grid center">
+          <div class="p-grid center p-py-0">
             <div class='p-col'>
               <img width="95%"
                    height="95%"
@@ -60,9 +60,9 @@
 
 
         <!--  buttons  -->
-        <div class="p-grid">
+        <div class="p-py-0">
           <!--  Multiple file download  -->
-          <div class="p-col-3 center p-mt-2">
+          <div class="p-py-0" style="text-align: right">
             <button pButton
                     type="button"
                     class="btn-action-large"
