--- a/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
+++ b/UI/src/app/modules/comparison/components/extent-visualization/extent-visualization.component.html
@@ -63,14 +63,16 @@
         <div class="p-py-0">
           <!--  Multiple file download  -->
           <div class="p-py-0" style="text-align: right">
-            <button pButton
-                    type="button"
-                    class="btn-action-large"
-                    title="Download the image as .png"
-                    label="Download image"
-                    icon="pi pi-download"
-                    (click)="downloadExtentImage(comparisonModel)">
-            </button>
+            <a class="btn-action-large" [href]=sanitizePlotUrl(img) download="downloaded filename"></a>
+            <a class="btn-action-large"
+               pButton
+               type="button"
+               icon="pi pi-download"
+               [href]=sanitizePlotUrl(img)
+               download="spatial_extent.png"
+               label="Download image"
+               title="Download the image as .png">
+            </a>
           </div>
         </div>
 
