--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -26,20 +26,36 @@
       </p-accordion>
 
       <!--  here selection of single or multiple non-reference validations. How to divide?  -->
-      <div class="p-grid">
+      <div class="p-grid p-pt-2">
         <div class="p-col-12">
-          <p-panel header="Non-reference datasets" [toggleable]="false">
-            <p-checkbox label="{{'Multiple non-reference datasets'}}"
-                        [(ngModel)]="multipleNonReference"
-                        [binary]="true"
-                        (click)="multipleNonReferenceChange()"
-            ></p-checkbox>
-            <label class="p-panel-header-icon"
-                   pTooltip="{{'Toggle to compare validations with 2 non-reference datasets'}}"
-                   tooltipPosition="bottom">
-              <span class="pi pi-question-circle p-ml-2"></span>
-            </label>
-          </p-panel>
+          <p-accordion multiple="true" activeIndex="0">
+            <p-accordionTab [header]="'Non-reference datasets'">
+              <p-checkbox label="{{'Multiple non-reference datasets'}}"
+                          [(ngModel)]="multipleNonReference"
+                          [binary]="true"
+                          (click)="multipleNonReferenceChange()"
+              ></p-checkbox>
+              <label class="p-panel-header-icon"
+                     pTooltip="{{'Toggle to compare validations with 2 non-reference datasets'}}"
+                     tooltipPosition="bottom">
+                <span class="pi pi-question-circle p-ml-2"></span>
+              </label>
+
+            </p-accordionTab>
+          </p-accordion>
+
+<!--          <p-panel header="Non-reference datasets" [toggleable]="false">-->
+<!--            <p-checkbox label="{{'Multiple non-reference datasets'}}"-->
+<!--                        [(ngModel)]="multipleNonReference"-->
+<!--                        [binary]="true"-->
+<!--                        (click)="multipleNonReferenceChange()"-->
+<!--            ></p-checkbox>-->
+<!--            <label class="p-panel-header-icon"-->
+<!--                   pTooltip="{{'Toggle to compare validations with 2 non-reference datasets'}}"-->
+<!--                   tooltipPosition="bottom">-->
+<!--              <span class="pi pi-question-circle p-ml-2"></span>-->
+<!--            </label>-->
+<!--          </p-panel>-->
         </div>
       </div>
 
@@ -57,7 +73,7 @@
         </label>
       </ng-template>
       <p-accordion multiple="true" activeIndex="0">
-        <p-accordionTab>
+        <p-accordionTab [header]="'Validations available for comparison'">
           <div class="p-grid">
             <div class="p-col-12">
 
