--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -1,7 +1,10 @@
+<div *ngIf="!(metricPlots$|async)" class="center">
+  <span class="pi pi-spin pi-spinner loading-spinner" title="This component is still loading"></span>
+</div>
 <div *ngIf="(metricPlots$|async) as plots" class="p-grid no-gutters">
   <div class="p-col-12">
     <!--  <p-panel>-->
-    <p-panel [toggleable]="true" [collapsed]="false">
+    <p-panel [toggleable]="true" [collapsed]="true">
       <ng-template pTemplate="header">
         <div class="text-center my-1" style="width: 92%">
           <h4 class="my-0 font-weight-normal">Comparison plots</h4>
