--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="!(comparisonTable$|async)" class="p-grid no-gutters">
-  <span class="pi pi-spin pi-spinner" title="This component is still loading"></span>
+<div *ngIf="!(comparisonTable$|async)" class="text-center">
+  <span class="pi pi-spinner loading-spinner" title="This component is still loading"></span>
 </div>
 <div *ngIf="(comparisonTable$|async) as table" class="p-grid no-gutters">
   <div class="p-col-12">
