--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -304,6 +304,25 @@ img {
   flex-wrap: nowrap;
 }
 
+@keyframes spinAndChangeColor {
+  from {color: #FFDB5C}
+  to {color: yellow;}
+  from {
+    transform:rotate(0deg);
+  }
+  to {
+    transform:rotate(360deg);
+  }
+}
+
+.loading-spinner{
+  font-size: 10rem;
+  margin: 1rem;
+  animation-name: spinAndChangeColor;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
 
 // @media
 
