--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -1,7 +1,7 @@
 <!-- custom -->
 <main>
   <div class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
-    <h1 class="jumbotron-heading">Validation comparison</h1>
+    <h1>Validation comparison</h1>
     <p class="lead text-muted">
       Compare results from your validations or published ones.
     </p>
@@ -19,7 +19,8 @@
       <div class="container mb-5 mt-4"
            style="max-width: 60rem;">
         <!--       summary of the selected comparison  -->
-        <div *ngIf="showComparisonResults">
+        <div *ngIf="showComparisonResults" class="comparison-result-container p-text-center">
+          <h3 class="p-my-3">Validation comparison results</h3>
           <qa-comparison-summary></qa-comparison-summary>
           <!--        visualize the validation extent-->
           <qa-extent-visualization></qa-extent-visualization>
