--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -4,7 +4,7 @@
 <div *ngIf="(metricPlots$|async) as plots" class="p-grid no-gutters">
   <div class="p-col-12">
     <!--  <p-panel>-->
-    <p-panel [toggleable]="true" [collapsed]="true">
+    <p-panel [toggleable]="true" [collapsed]="false">
       <ng-template pTemplate="header">
         <div class="text-center my-1" style="width: 92%">
           <h4 class="my-0 font-weight-normal">Comparison plots</h4>
