label on remove button changed

--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -88,7 +88,7 @@
                   pButton
                   type="button"
                   (click)="removeValidation(item)"
-                  [label]="'Remove: ' + (item.id)"
+                  [label]="'Remove: ' + (item.comparison_label)"
                   icon="pi pi-trash"
                   class="p-button-danger p-mt-2" style="padding: 0.2rem;">
           </button>
