Update for HR datasets

--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<script src="../../modules/map/components/map/bounding-box-control.ts"></script>
 <div class="p-grid">
   <div class="p-col-12">
     <p-carousel [value]="landingPageImages"  [circular]="true" [autoplayInterval]="3000">
